--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,9 @@ verify_ssl = true
 
 [packages]
 flask = "*"
+pytest = "*"
+coverage = "*"
+flaskr = {editable = true,path = "."}
 
 [requires]
 python_version = "3.7"
